.provarCaches/00D5f000005vwGkEAI/objects/rstk__mobidevice__c.object
<CustomObject>
    <description>mobidevice__c</description>
    <fields>
        <fullName>rstk__active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__description__c</fullName>
        <label>Description</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__deviceid__c</fullName>
        <externalId>true</externalId>
        <label>Device ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__deviceidformula__c</fullName>
        <formula>&quot;X-&quot; &amp; RIGHT( rstk__deviceid__c , 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device ID (Last 12)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__lastsync__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Sync</label>
        <type>DateTime</type>
    </fields>
    <label>Mobile Device</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__description__c</columns>
        <columns>rstk__deviceidformula__c</columns>
        <columns>rstk__active__c</columns>
        <columns>rstk__lastsync__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DID-{000000}</displayFormat>
        <label>Device No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>